--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ repo:         https://github.com/tigefa4u/tigefa-node.js
 # Extra Configuration
 safe:             true
 lsi:              false
-pygments:         false
+pygments:         true
 timezone:         Asia/Jakarta
 markdown:         redcarpet
 redcarpet:
@@ -14,7 +14,7 @@ redcarpet:
 
 # Routing configuration
 url:                   http://nodejs.tigefa.org
-#baseurl:               /tigefa-node.js
+baseurl:               /tigefa-node.js
 permalink:             /articles/:title
 relative_permalinks:   false
 
