--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ repo:         https://github.com/tigefa4u/tigefa-node.js
 # Extra Configuration
 safe:             true
 lsi:              false
-pygments:         true
+pygments:         false
 timezone:         Asia/Jakarta
 markdown:         kramdown
 
